--- a/suche.html
+++ b/suche.html
@@ -81,7 +81,7 @@
             });
         marker.setIcon(myIcon2);
 
-        //KReis mit Radius Distanz und Mittelpunkt Map-Klick
+        //Kreis mit Radius Distanz und Mittelpunkt Map-Klick
         let circle = L.circle(e.latlng, {
             color: distanceColor,
             fillColor: distanceColor,
