--- a/suche.html
+++ b/suche.html
@@ -63,7 +63,7 @@
         //Reaktion auf Map-Klick
         function onMapClick(e) {
 
-        //FRabe je nach Distanz rot > gelb > grün
+        //Farbe je nach Distanz rot > gelb > grün
         let distanceColor = "";
 
         if (map.distance(e.latlng, marker.getLatLng()) > 500){
