--- a/suche.html
+++ b/suche.html
@@ -89,7 +89,7 @@
             radius: map.distance(e.latlng, marker.getLatLng())
         }).addTo(map);
 
-        //Info-Pop-Up
+        //Info-Pop-Up (Map Klick und Distanz Marker <-> Map Klick)
         let popup = L.popup();
         popup
             .setLatLng(e.latlng)
