--- a/suche.html
+++ b/suche.html
@@ -28,6 +28,7 @@
             font-family: Tahoma, Verdana, sans-serif;
         }
      </style>
+     <!-- Test-->
     </head>
     <body>
         <div><h1>Uni Salzburg (Verwaltung)</h1></div>
