--- a/uebersicht.html
+++ b/uebersicht.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Standortsuche</title>
+        <title>Standort&uuml;bersicht</title>
          <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
