--- a/uebersicht.html
+++ b/uebersicht.html
@@ -45,11 +45,12 @@
     <body>
         <div><h1>Uni Salzburg</h1></div>
         <div id="nav">
-            <div class="gebaeude">Nawi <div class="buttonR" onclick="removeLayer(nawi);">-</div> <div class="buttonG" onclick="addLayer(nawi);">+</div></div>
-            <div class="gebaeude">Unipark Nonntal <div class="buttonR" onclick="removeLayer(unipark_nonntal);">-</div> <div class="buttonG" onclick="addLayer(unipark_nonntal);">+</div></div>
-            <div class="gebaeude">Geswi <div class="buttonR" onclick="removeLayer(geswi);">-</div> <div class="buttonG" onclick="addLayer(geswi);">+</div></div>
-            <div class="gebaeude">Studiengebäude <div class="buttonR" onclick="removeLayer(studiengebaeude);">-</div> <div class="buttonG" onclick="addLayer(studiengebaeude);">+</div></div>
+            <div class="gebaeude">Nawi <div class="buttonR" id="nawiOff" onclick="removeLayer(nawi, 'nawiOff');">-</div> <div class="buttonG" id="nawiOn" onclick="addLayer(nawi, 'nawiOn');">+</div></div>
+            <div class="gebaeude">Unipark Nonntal <div class="buttonR" id="unipark_nonntalOff" onclick="removeLayer(unipark_nonntal, 'unipark_nonntalOff');">-</div> <div class="buttonG" id="unipark_nonntalOn"  onclick="addLayer(unipark_nonntal, 'unipark_nonntalOn');">+</div></div>
+            <div class="gebaeude">Geswi <div class="buttonR" id="geswiOff" onclick="removeLayer(geswi, 'geswiOff');">-</div> <div class="buttonG" id="geswiOn" onclick="addLayer(geswi, 'geswiOn');">+</div></div>
+            <div class="gebaeude">Studiengebäude <div class="buttonR" id="studiengebaeudeOff" onclick="removeLayer(studiengebaeude, 'studiengebaeudeOff');">-</div> <div class="buttonG" id="studiengebaeudeOn" onclick="addLayer(studiengebaeude, 'studiengebaeudeOn');">+</div></div>
         </div>
+        <div id="status"></div>
         <div id="map"></div>
              <script>
         //Karte 
@@ -75,14 +76,32 @@
       studiengebaeude.bindPopup("Studiengebäude");
 
     //Layer von Karte entfernen
-      function removeLayer(layer){
+      function removeLayer(layer, layerOff){
         map.removeLayer(layer);
+        document.getElementById(layerOff).style.backgroundColor = "grey";
+        document.getElementById(layerOff.slice(0, -3) + "On").style.backgroundColor = "#04AA6D";
       }
 
-       //Layer zu Karte hinzufügen
-      function addLayer(layer){
+    //Layer zu Karte hinzufügen
+      function addLayer(layer, layerOn){
         map.addLayer(layer);
-      }
+        document.getElementById(layerOn).style.backgroundColor = "grey";
+        document.getElementById(layerOn.slice(0, -2) + "Off").style.backgroundColor = "#f44336";
+    }
+
+
+    //Layer checken
+    function layerCheck(layer, layerName){
+    if (map.hasLayer(layer)){
+       document.getElementById(layerName + "On").style.backgroundColor = "grey";
+    }
+    }
+
+    layerCheck(nawi, "nawi");
+    layerCheck(unipark_nonntal, "unipark_nonntal");
+    layerCheck(geswi, "geswi");
+    layerCheck(studiengebaeude, "studiengebaeude");
+
 
      </script>
     </body>
