--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             <li><a href="suche.html">Suche</a></li>
             <li><a href="uebersicht.html">&Uuml;bersicht</a></li>
             <li><a href="salzburg.html">Salzburg</a></li>
+            <li><a href="info.html">Infos</a></li>
         </ul>
     </body>
 </html>
