--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             <li><a href="uebersicht.html">&Uuml;bersicht</a></li>
             <li><a href="salzburg.html">Salzburg</a></li>
             <li><a href="info.html">Infos</a></li>
+            <li><a href="mobile.html">Mobile</a></li>
         </ul>
     </body>
 </html>
