--- a/mobile.html
+++ b/mobile.html
@@ -5,12 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<title>Mobile tutorial - Leaflet</title>
-	
-	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-	<meta http-equiv="refresh" content="30">
+	<!-- <meta http-equiv="refresh" content="30"> -->
 	<style>
 		html, body {
 			height: 100%;
@@ -29,31 +27,73 @@
 <body>
 
 <div id='map'></div>
+<div id='nearby'>Text</div>
 
 <script>
+	//Weltkarte
 	const map = L.map('map').fitWorld();
 
+	//OpenStreatmap
 	const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		maxZoom: 19,
 		attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 	}).addTo(map);
 
-	let nawi_brunnen = L.marker([47.788702355087878,13.060706238504592]).addTo(map);
+	//Marker Brunnen
+	let nawi_brunnen = L.marker([47.788702355087878,13.060706238504592],{title: 'Nawi Brunnen'}).addTo(map);
      nawi_brunnen.bindPopup("<strong>Nawi-Brunnen</strong><br>Brunnen im Innenhof der <a href=\"https://www.plus.ac.at/raumvermarktung/naturwissenschaftliche-fakultaet/\" target =\"_blank\">Nawi</a><br><img src=\"nawi_brunnen.jpg\" width=\"200\">");
 
-	function onLocationFound(e) {
+	//Marker Rainer Obelisk
+	let rainer_obelisk = L.marker([47.7811666, 13.0489689],{title: 'Rainer Obelisk'}).addTo(map);
+	rainer_obelisk.bindPopup("<strong>Rainer Obelisk</strong>");
+	
+	//Ortungsfunktion
+	 function onLocationFound(e) {
 		const radius = e.accuracy / 2;
 
+		//Lage-Popup
 		const locationMarker = L.marker(e.latlng).addTo(map)
 			.bindPopup(`You are within ${radius} meters from this point`).openPopup();
 
+		//Genauigkeitskreis
 		const locationCircle = L.circle(e.latlng, radius).addTo(map);
 
+		//Entfernung zu Nawibrunnen
 		if (map.distance(e.latlng, nawi_brunnen.getLatLng()) < 500){
-            nawi_brunnen.openPopup();;
+            nawi_brunnen.openPopup();
         }
-	}
 
+		//entfernung zu Rainer Obelisk
+		if (map.distance(e.latlng, rainer_obelisk.getLatLng()) < 500){
+            rainer_obelisk.openPopup();
+        }
+
+	let textInfoA = [];
+
+	let textInfoT = [];
+
+	//Informationen zu den Markern
+	map.eachLayer(function(layer) {
+        if (layer instanceof L.Marker) {
+            let lCoordinates = layer.getLatLng();
+			let lTitel = layer.options.title;
+			let lPopup = layer.getPopup().getContent();
+			let lEntfernung = map.distance(e.latlng, layer.getLatLng())
+			textInfoA.push([lTitel, lEntfernung, lCoordinates,lPopup])
+        }
+    });
+
+	//Als Text
+	for (let x = 0; x < textInfoA.length-1; x++){
+		for(let y = 0; y < textInfoA[x].length; y++){
+		textInfoT = textInfoT + " | " + textInfoA[x][y];
+	}
+	textInfoT += "<br>"
+}
+document.getElementById('nearby').innerHTML = textInfoT;
+	 }
+
+	//Funktion für Probleme bei der Lokalisierung
 	function onLocationError(e) {
 		alert(e.message);
 	}
