--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             <li><a href="salzburg.html">Salzburg</a></li>
             <li><a href="info.html">Infos</a></li>
             <li><a href="mobile.html">Mobile</a></li>
+            <li><a href="storymap.html">Storymap</a></li>
         </ul>
     </body>
 </html>
