--- a/storymap.html
+++ b/storymap.html
@@ -51,7 +51,7 @@
 <div id="map2" class="side_map"></div>
 <div class="side_text">
     <h2>Alterbach Oberlauf</h2>
-    <p>Im Oberlauf fließt er zwischen Heuberg und Gaisberg durch und hat mehrere kleine Zufl&uuml;sse. Dort ist er teilweise nicht verbaut und teilweise aber realtiv stark.</p>
+    <p>Im Oberlauf flie&szlig;t er zwischen Heuberg und Gaisberg durch und hat mehrere kleine Zufl&uuml;sse. Dort ist er teilweise nicht verbaut und teilweise aber realtiv stark.</p>
     <a href="img/alterbach_oberlauf.png" target="_blank"><img class="img_side" src="img/alterbach_oberlauf.png"></a>
     <a href="img/alterbach_kaskaden.png" target="_blank"><img class="img_side" src="img/alterbach_kaskaden.png"></a>
 </div>
