Umstrukturierung und Anpassung Übersicht

--- a/geojson.html
+++ b/geojson.html
@@ -53,7 +53,7 @@
         return Struktur != null ? Struktur : " - ";
     }
 
-    //Layer Controll
+    //Layer Control
     var baseMaps = {
     "Basemap": basemap,
     "OpenStreetMap": osm
