--- a/index.html
+++ b/index.html
@@ -1,13 +1,80 @@
 <html>
     <head><title>Leaflet Experimente</title></head>
+    <style>
+        td{
+            vertical-align: top;
+        }
+    </style>
     <body>
-        <ul>
-            <li><a href="suche.html">Suche</a></li>
-            <li><a href="uebersicht.html">&Uuml;bersicht</a></li>
-            <li><a href="salzburg.html">Salzburg</a></li>
-            <li><a href="info.html">Infos</a></li>
-            <li><a href="mobile.html">Mobile</a></li>
-            <li><a href="storymap.html">Storymap</a></li>
-        </ul>
+        <table>
+            <tr>
+                <td><a href="punkt_raten.html">Punkt Raten</a></td>
+                <td>
+                    <ul>
+                        <li>OnMypClick</li>
+                        <li>map.distance</li>
+                        <li>Circle Marker Gr&ouml;&szlig;e und Farbe nach Distanz</li>
+                        <li>Pop-Up</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td><a href="layer.html">Layer</a></td>
+                <td>
+                    <ul>
+                        <li>Marker</li>
+                        <l>Zentrum als Mitte der Koordinaten</l>
+                        <li>LayerAdd/ LayerRemove/ zoomTo</li>
+                        <li>Button Status</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td><a href="geojson.html">GeoJson</a></td>
+                <td>
+                    <ul>
+                        <li>Externes JSON</li>
+                        <li>Layer Control</li>
+                        <li>2 Base Layer</li>
+                        <li>JSON Layer Info Pop-Up</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td><a href="info.html">Infos</a></td>
+                <td>
+                    <ul>
+                        <li>Anzeige Map Center</li>
+                        <li>Anzeige Map Zoom</li>
+                        <li>Anzeige Map Bounds</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td><a href="mobile.html">Mobile</a></td>
+                <td>
+                    <ul>
+                        <li>Ortungsfunktion</li>
+                        <li>Marker mit Pop-Up</li>
+                        <li>Entfernung von Marker zu Standort</li>
+                        <li>PopUp Marker in der N&auml;he zum Standort</li>
+                        <li>Liste von Markern nach Entfernung zum Standort</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td><a href="storymap.html">Storymap</a></td>
+                <td>
+                    <ul>
+                        <li>Sektion 100%</li>
+                        <li>Display Flex - row und column</li>
+                        <li>Karte und Beschreibung je Sektion</li>
+                        <li>Gallerie</li>
+                        <li>LayerAdd/ LayerRemove/ zoomTo</li>
+                        <li>Bild mit Rahmen</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
     </body>
 </html>
