--- a/punkt_raten.html
+++ b/punkt_raten.html
@@ -1,7 +1,7 @@
 
 <html>
     <head>
-        <title>Standortsuche</title>
+        <title>Punkt Raten</title>
          <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
@@ -32,7 +32,10 @@
      <!-- Test-->
     </head>
     <body>
-        <div><h1>Uni Salzburg (Verwaltung)</h1></div>
+        <div>
+            <h1>Punkt Raten</h1>
+            <p>Uni Salzburg (Verwaltung)</p>
+        </div>
         <div id="tryAgain" class="button" onclick="location.reload()">Reload</div>
         <div id="map"></div>
              <script>
