Korrekturen und ReadMe Ergänzung

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <td><a href="punkt_raten.html">Punkt Raten</a></td>
                 <td>
                     <ul>
-                        <li>OnMypClick</li>
+                        <li>OnMapClick</li>
                         <li>map.distance</li>
                         <li>Circle Marker Gr&ouml;&szlig;e und Farbe nach Distanz</li>
                         <li>Pop-Up</li>
