--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
     <head><title>Leaflet Experimente</title></head>
     <style>
+        body{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
         td{
             vertical-align: top;
         }
