--- a/layer.html
+++ b/layer.html
@@ -37,7 +37,7 @@
             font-size: 10px;
         }
         .buttonN {
-            background-color: grey; /* Greey */
+            background-color: black; /* Black */
             border: none;
             color: white;
             padding: 5px 10px;
