--- a/mobile.html
+++ b/mobile.html
@@ -13,6 +13,7 @@
 		html, body {
 			height: 100%;
 			margin: 0;
+			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
 		.leaflet-container {
 			height: 400px;
