--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
                     </ul>
                 </td>
             </tr>
+            <tr>
+            <td>
+                <a href="basics.html">Leaflet Basics</a> (<a href="karte.html">Karte</a>)
+            </td>
+            <td>
+                <ul>
+                    <li>Karte</li>
+                    <li>OSM Layer</li>
+                    <li>Marker</li>
+                    <li>Marker PopUp</li>
+                </ul>
+            </td>
+            </tr>
         </table>
     </body>
 </html>
