--- a/basics.html
+++ b/basics.html
@@ -240,7 +240,7 @@
 
     <h1>Karte</h1>
 
-    <p><a href="karte.html" target="_blank">Link</a></p>
+    <p><a href="karte.html" target=_blank">Link</a></p>
 
     <iframe src="karte.html" width="100%" height="620"></iframe>
 
