--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <td>
                     <ul>
                         <li>Marker</li>
-                        <l>Zentrum als Mitte der Koordinaten</l>
+                        <li>Zentrum als Mitte der Koordinaten</li>
                         <li>LayerAdd/ LayerRemove/ zoomTo</li>
                         <li>Button Status</li>
                     </ul>
